# TriumvirLabs

./: README.md  pyproject.toml
triumvirlabs/app/: input_ehr.txt  llm.py  main.py  models.py
