[project]
name = "triumvirlabs"
version = "0.1.0"
description = "ElevenLabs Worldwide Hackathon"
authors = [
    {name = "Aron Pap",email = "aron.pap@barcelonagse.eu"},
    {name = "Levente Harsanyi",email = "hlevente17@gmail.com"},
    {name = "Peter Palos",email = "peterpalos333@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.52.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "elevenlabs (>=2.26.1,<3.0.0)",
    "anthropic (>=0.75.0,<0.76.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
